--- a/rarebit-1.5/archive.html
+++ b/rarebit-1.5/archive.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- header -->
-    <div class="writeHeader"></div>
+    <div class="writeHeader" align="center"></div>
 
 
     <div class="archivePage subPage" align="center">
