--- a/rarebit-1.5/about.html
+++ b/rarebit-1.5/about.html
@@ -18,18 +18,25 @@
 </head>
 <body>
     <!-- header -->
-    <div class="writeHeader"></div>
+    <div class="writeHeader" align="center"></div>
 
     <div class="subPage clearfix">
         <h1>About</h1>
-        <p>This is an example of how to use the <strong>Rarebit template.</strong> It uses a public domain comic strip called <strong>Teena</strong> that ran in newspapers from 1944 to 1963.</p> 
+        <p>This is a little project of mine. I am trying to write a pixel art webcomic loosely based on a game idea I had, and which I may or may not realize one day. <strong>Dungeon Crew</strong> is a webcomic seriers about a bunch of evildoers doing evil stuff in their evil dungeon.</p> 
         
         <img src="img/hildaterry.png" alt="Hilda Terry" class="clearfix leftPic"/>
 
         <div id="authorBlurb">
-            <p>The author, <strong>Hilda Terry</strong>, became the first woman allowed to join the National Cartoonists Society, upon which she lobbied for other women cartoonists to join, such as <strong>Mopsy</strong> author <strong>Gladys Parker.</strong></p> 
-            <p>She also held a firm belief that she was a reincarnation of <strong>Dorcas Good</strong>, a child imprisoned after being accused of practicing witchcraft in the 1692 Salem witch trials.</p>
-            <p>Say what you will, but the lady's got range!</p>
+            <p>I also am a game developer and programmer. You can check out my work on itch and github.</p> 
+            <p>This webcomic was in great part made from modified assets packs which were bought or downloaded from itch.io <a href="https://itch.io/c/5207620/dungeon-crew-asset-packs">You can check them out here!</a></p>
+            <p>I might eventually release my own asset pack, with all of the characters, objects, environments, expressions and creatures that were custom made for this project.</p>
+            <p>This project was greatly inspired by multiple comics, you can check them out if you want, they're all great:</p>
+            <ul style="text-align: left; font-size: 17px;">
+                <li>The webcomic <a href="https://www.nuklearpower.com/8-bit-theater-archive/?archive_year=2006">8-bit theater</a>, by Brian Clevinger</li>
+                <li>The webcomic <a href="https://www.giantitp.com/comics/ootscast.html">The Order of the Stick</a>, by Rich Burlew</li>
+                <li>The comic book series <a href="https://en.wikipedia.org/wiki/Dungeon_(comics)">Dungeon</a>, by Joann Sfar and Lewis Trondheim</li>
+                <li>The graphic novel <a href="https://en.wikipedia.org/wiki/The_Ogre_Gods">The Ogre Gods</a>, by Hubert Boulard and Bertrand Gatignol</li>
+            </ul>
         </div>
     </div>
     
