wip website style

--- a/rarebit-1.5/characters.html
+++ b/rarebit-1.5/characters.html
@@ -19,7 +19,7 @@
 <body align="center">
 
     <!-- header -->
-    <div class="writeHeader"></div>
+    <div class="writeHeader" align="center"></div>
 
     <!-- this character page kind of sucks, its more of an example of the kinds of supplementary pages you can potentially add-->
     
