--- a/rarebit-1.5/about.html
+++ b/rarebit-1.5/about.html
@@ -22,12 +22,12 @@
 
     <div class="subPage clearfix">
         <h1>About</h1>
-        <p>This is a little project of mine. I am trying to write a pixel art webcomic loosely based on a game idea I had, and which I may or may not realize one day. <strong>Dungeon Crew</strong> is a webcomic seriers about a bunch of evildoers doing evil stuff in their evil dungeon.</p> 
+        <p>This is a little project of mine. I am trying to write a pixel art webcomic loosely based on a game idea I had, and which I may or may not realize one day. <strong>Dungeon Crew</strong> is a webcomic series about a bunch of evildoers doing evil stuff in their evil dungeon.</p> 
         
-        <img src="img/hildaterry.png" alt="Hilda Terry" class="clearfix leftPic"/>
+        <img src="img/banner_vertical.png.png" alt="Hilda Terry" class="clearfix leftPic"/>
 
         <div id="authorBlurb">
-            <p>I also am a game developer and programmer. You can check out my work on itch and github.</p> 
+            <p>I also am a game developer and programmer. You can check out my work on <a href="https://maxence-maire.itch.io/">Itch.io</a> and <a href="https://github.com/Maxoups">Github</a>.</p> 
             <p>This webcomic was in great part made from modified assets packs which were bought or downloaded from itch.io <a href="https://itch.io/c/5207620/dungeon-crew-asset-packs">You can check them out here!</a></p>
             <p>I might eventually release my own asset pack, with all of the characters, objects, environments, expressions and creatures that were custom made for this project.</p>
             <p>This project was greatly inspired by multiple comics, you can check them out if you want, they're all great:</p>
