--- a/rarebit-1.5/characters.html
+++ b/rarebit-1.5/characters.html
@@ -24,7 +24,7 @@
     <!-- this character page kind of sucks, its more of an example of the kinds of supplementary pages you can potentially add-->
     
     <div class="subPage clearfix" align="center">
-        <h1>Characters</h1>
+        <h1>Synopsis</h1>
         <p>All of these sub pages are just supposed to be examples of what you could do, you're definitely encouraged to mess around with them and come up with something better</p>
             <table class="charTable">
                 <!-- teena -->
