--- a/rarebit-1.5/about.html
+++ b/rarebit-1.5/about.html
@@ -24,7 +24,7 @@
         <h1>About</h1>
         <p>This is a little project of mine. I am trying to write a pixel art webcomic loosely based on a game idea I had, and which I may or may not realize one day. <strong>Dungeon Crew</strong> is a webcomic series about a bunch of evildoers doing evil stuff in their evil dungeon.</p> 
         
-        <img src="img/banner_vertical.png.png" alt="Hilda Terry" class="clearfix leftPic"/>
+        <img src="img/banner_vertical.png" alt="Hilda Terry" class="clearfix leftPic"/>
 
         <div id="authorBlurb">
             <p>I also am a game developer and programmer. You can check out my work on <a href="https://maxence-maire.itch.io/">Itch.io</a> and <a href="https://github.com/Maxoups">Github</a>.</p> 
