added link from main website

--- a/index.html
+++ b/index.html
@@ -109,8 +109,13 @@
 		</h2>
 
 		<div class="z-text">
+			<h3>Webcomic</h3>
+			<p>
+				I am currently working on <strong><a href="https://maxoups.github.io/dungeon-crew/index.html?pg=1">Dungeon Crew</a></strong>, a small webcomic and cool passion project.
+			</p>
+
 			<h3>Work and Academic background
-				<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="margin-top: -180px; margin-left: 60px; rotate: 0deg;">
+				<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="margin-top: -160px; margin-left: 60px; rotate: 0deg;">
 			</h3>
 
 			<p>
