--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href='hover_effects.css' rel='stylesheet' type='text/css'>
 	<link href='sidebar_style.css' rel='stylesheet'>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=12.0, minimum-scale=.25, user-scalable=yes">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=12.0, minimum-scale=0.0, user-scalable=yes">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
