--- a/dungeon-crew/about.html
+++ b/dungeon-crew/about.html
@@ -29,7 +29,8 @@
 
         <div id="authorBlurb">
             <p>I also am a game developer and programmer. You can check out my work on <a href="https://maxence-maire.itch.io/">Itch.io</a> and <a href="https://github.com/Maxoups">Github</a>.</p> 
-            <p>This webcomic was in great part made from modified assets packs which were bought or downloaded from itch.io <strong><a href="https://itch.io/c/5207620/dungeon-crew-asset-packs">You can check them out here!</a></strong></p>
+            <p>This webcomic was in great part made from modified assets packs which were bought or downloaded from itch.io.</p>
+            <p><strong><a href="https://itch.io/c/5207620/dungeon-crew-asset-packs">You can check out the assets I used here!</a></strong></p>
             <p>I might eventually release my own asset pack, with all of the characters, objects, environments, expressions and creatures that were custom made for this project.</p>
             <p>This project was greatly inspired by multiple comics, you can check them out if you want, they're all great:</p>
             <ul style="text-align: left; font-size: 17px;">
