set fixed nav buttons

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		<div class="z-text">
 			<h3>Webcomic</h3>
 			<p>
-				I am currently working on <strong><a href="https://maxoups.github.io/dungeon-crew/index.html?pg=1">Dungeon Crew</a></strong>, a small webcomic and cool passion project.
+				I am currently working on <strong><a href="https://maxoups.github.io/dungeon-crew/index.html?pg=1">Dungeon Crew</a></strong>, a small pixel art webcomic and cool passion project.
 			</p>
 
 			<h3>Work and Academic background
