--- a/dungeon-crew/index.html
+++ b/dungeon-crew/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=20.0, minimum-scale=0.0, user-scalable=yes">
     <title>Dungeon Crew Webcomic</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
     <!-- fonts -->
