--- a/index.html
+++ b/index.html
@@ -220,5 +220,6 @@
 	</div>
 	</div>
 	<script src="script.js"></script>
+	<script src="js/writeProjectBubbles.js" defer></script>
 </body>
 </html>
