wip work bubble function

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 			<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="margin-top: -170px; margin-left: -425px; rotate: 5deg; transform: scaleX(-1);">
 		</h2>
 
+		<div class="projectBubbles"></div>
+
 		<div class="z-text">
 			<h3>Webcomic</h3>
 			<p>
