wip draxwing lines between work items

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 	</div>
 	</div>
 	<script src="script.js"></script>
+	<script src="js/leader-line.min.js"></script>
 	<script src="js/writeProjectBubbles.js" defer></script>
 </body>
 </html>
