added get in touch session, removed old text

--- a/index.html
+++ b/index.html
@@ -104,105 +104,32 @@
 			</button>
 		</div>
 
-		<h2 class="z-text" style="margin-top: 60px;">Learning journey:
+		<div class="background-characters">
 			<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="margin-top: -170px; margin-left: -425px; rotate: 5deg; transform: scaleX(-1);">
-		</h2>
+			<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="margin-top: -160px; margin-left: 60px; rotate: 0deg;">
+			<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="margin-top: -40px; margin-left: 93%; rotate: 20deg; z-index: -10;">
+			<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="margin-top: -55px; margin-left: 20%; rotate: 0deg; z-index: 2;">
+			<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="margin-top: 50px; margin-left: -57%; rotate: -5deg; transform: scaleX(-1);">
+			<img class="img-echoes" src="images/echoes-p7.png" title="That's a security guard" style="margin-top: 10px; margin-left: -350px; rotate: -15deg; transform: scaleX(-1);">
+		</div>
 
 		<div class="projectBubbles"></div>
 
-		<div class="z-text">
-			<h3>Webcomic</h3>
+		<div class="z-text" style="margin-bottom: 20px;">
+			<h3 style="margin-top: 60px;">Get in touch!</h3>
 			<p>
-				I am currently working on <strong><a href="https://maxoups.github.io/dungeon-crew/index.html?pg=1">Dungeon Crew</a></strong>, a small pixel art webcomic and cool passion project.
+				If you're here, it might be because you're asking yourself if you want to hire me, or because you're interested in my work, 
+				or just because you stumbled upon this page and were curious enough to read all of it. In any case, thanks for reading! You can contact me 
+				through the link below.
 			</p>
-
-			<h3>Work and Academic background
-				<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="margin-top: -160px; margin-left: 60px; rotate: 0deg;">
-			</h3>
-
-			<p>
-				I have worked on a multiplayer VR game for the 2024 Paris Olympic Games with 
-				<a href="https://paris.virtual-room.com/" target="_blank" rel="noopener noreferrer">Virtual Room</a>, a game company specializing 
-				in multiplayer virtual reality experiences.
-			</p>			
-			<p>
-				I have completed a <a href="https://sciences.sorbonne-universite.fr/en/formation-sciences/masters/master-informatique/parcours-androide" target="_blank" rel="noopener noreferrer">
-					Master's Degree program</a> in Computer Science at Sorbonne Université in Paris. There, I studied a large range of subjects, 
-				including Machine Learning, Multi-Agent Systems, Virtual Reality, Robotics, Human-Computer Interaction and Serious Games.
-			</p>
-			<p>
-				As part of my studies, I completed multiple research projects, such as a 
-				<a href="http://androide.lip6.fr/?q=node/674" target="_blank" rel="noopener noreferrer"> project focused on swarm robotics</a>, as well as a 
-				<a href="https://ken-takahashi.net/french-sorbonne-university-student-executes-fluid-dynamics-simulation-project-for-organ-chips/" target="_blank" 
-				rel="noopener noreferrer"> research internship in bioengineering, specifically on organ-on-a-chip technology, at Okayama University</a>, in Japan.
-			</p>
-			<p>
-				In 2022, I graduated with a double <a href="https://sciences.sorbonne-universite.fr/formation/offre-de-formation/licences/doubles-cursus-et-doubles-licences-sciences-et-sciences" target="_blank" rel="noopener noreferrer">
-					Bachelor's degree in Computer Science and Modern Literature</a> from Sorbonne Université.
-			</p>
-			<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="margin-top: -40px; margin-left: 93%; rotate: 20deg; z-index: -10;">
-		</div>
-		
-
-		<div class="z-text" style="margin-bottom: 60px;">
-			<h3 style="margin-top: 60px;">Personal experiences
-				<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="margin-top: -55px; margin-left: 20%; rotate: 0deg; z-index: 2;">
-			</h3>
-			<p>
-				For years, I have been deeply passionate about game design, programming, and literature, and I have gained extensive experience in software and game development. 
-				I am always trying to build impactful experiences and grow as a game designer!
-			</p>
-			<p>
-				More recently, I have been exploring the fields of web development and animation, expanding my knowledge and skills to become more proficient 
-				in these areas.
-			</p>
-			<p>
-				In my spare time, I enjoy cooking, practicing fencing, and spending time with my cat. I like my cat. She's very cute. I will show you a picture of her if you ask. And probably also if you don't ask.
-				<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="margin-top: 50px; margin-left: -57%; rotate: -5deg; transform: scaleX(-1);">
-			</p>
+			<a class="link-n" style="text-align:center;margin-top:5px; padding-bottom: 45px;" href = "mailto: mm.maxencemaire@gmail.com" target="_blank" rel="noopener noreferrer">Send me an Email</a>
 		</div>
 
-		<hr class="h-line"/>
-
-		<h2 class="z-text">Latest game projects:
-			<img class="img-echoes" src="images/echoes-p7.png" title="That's a security guard" style="margin-top: 10px; margin-left: -350px; rotate: -15deg; transform: scaleX(-1);">
-		</h2>
-
-		<iframe src="https://itch.io/embed/1824207?bg_color=004140&amp;fg_color=ffffff&amp;link_color=9783f2&amp;border_color=354d51" 
-			width="552" height="167" frameborder="0">
-			<a href="https://feuillemorteentertainment.itch.io/echoes-complete-edition">ECHOES - Complete edition by FeuilleMorte Entertainment</a>
-		</iframe>
-
-		<iframe src="https://itch.io/embed/1579605?bg_color=221423&amp;fg_color=fff5eb&amp;link_color=ee4040&amp;border_color=682d73" 
-			width="552" height="167" frameborder="0">
-			<a href="https://feuillemorteentertainment.itch.io/flymetothesun">Fly me to the Sun by FeuilleMorte Entertainment, Talamh, Cochon_Viking, Pioure, Maureen Bst</a>
-		</iframe>
-
-		<iframe frameborder="0" src="https://itch.io/embed/2203248?linkback=true&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=c9c9c9&amp;border_color=333ad6" 
-			width="552" height="167" frameborder="0">
-			<a href="https://feuillemorteentertainment.itch.io/we-have-a-mole">We have a mole by FeuilleMorte Entertainment</a>
-		</iframe>
-
-		<iframe src="https://itch.io/embed/1492024?bg_color=e08767&amp;fg_color=222222&amp;link_color=dc1a06&amp;border_color=b44242" 
-			frameborder="0">
-			<a href="https://feuillemorteentertainment.itch.io/scrambled">Scrambled! by FeuilleMorte Entertainment</a>
-		</iframe>
-
-		<iframe src="https://itch.io/embed/736364?bg_color=2f2f2f&amp;fg_color=ffffff&amp;link_color=858883&amp;border_color=979797" 
-			width="552" height="167" frameborder="0">
-			<a href="https://feuillemorteentertainment.itch.io/dangerous-roads">Dangerous Roads by FeuilleMorte Entertainment</a>
-		</iframe>
-
-		<iframe src="https://itch.io/embed/1054995?bg_color=860080&amp;fg_color=dbfbfd&amp;link_color=f70000&amp;border_color=333333" 
-			width="552" height="167" frameborder="0">
-			<a href="https://feuillemorteentertainment.itch.io/cats-are-long-liquid">Cats are long liquid by FeuilleMorte Entertainment</a>
-		</iframe>
-
-		<hr class="h-line"/>
-		<div style="height:20px">
+		<hr class="h-line" style="margin-top: 200px;"/>
+		<div style="height:20px;">
 			<img class="img-olmo" src="images/olmo-6.png" title="That's the mayor..." style="margin-top: -185px; margin-left: -110px; rotate: 0deg; transform: scale(2.0);">
 			<img class="img-olmo" src="images/olmo-cerez.png" title="You found Olmo! :))" style="margin-top: -290px; margin-left: 60px; rotate: 0deg;">
-			<img class="img-olmo" src="images/olmo-building.png" title="That's just Castano's place." style="margin-top: -463px; margin-left: 62%; rotate: 0deg; transform: scale(2.5);">
+			<img class="img-olmo" src="images/olmo-building.png" title="That's just Castano's place." style="margin-top: -463px; margin-left: 65%; rotate: 0deg; transform: scale(2.5);">
 		</div>
 
 		<div class="bubbles">
