--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</ul>
 			</div>
 
-			<div style="border-left:1px solid #000;height:40vh">
+			<div class="intro-child-right-sep" style="border-left:1px solid #000;height:40vh">
 				<img class="img-scrambled" src="images/scrambled-p1.png" title="That's a chicken with a grenade launcher" style="margin-top: 263px; margin-left: -35px; transform: scaleX(-1);">
 			</div>
 
@@ -88,23 +88,15 @@
 			</div>
 		</div>
 
-
-		<div class="intro-tab">
-			<button type="button" class="button-l" onclick="location.href='Maxence Maire - CV.pdf';" >
+		<div style="text-align:left; display:flex; width:100%; justify-content: center;">
+			<button type="button" style="justify-self:center; align-self:center; min-width:200px; max-width:300px; margin-bottom: 50px;" onclick="location.href='Maxence Maire - CV.pdf';" >
 				<div class="i-am">
 					<h3>Resume</h3>
 				</div>
 			</button> 
-			<button type="button" class="button-r" onclick="location.href='Maxence Maire - Portfolio.pdf';">
-				<div class="i-am">
-					<h3>Portfolio</h3>
-					</ul>
-				</div>
-				
-			</button>
 		</div>
 
-		<div class="background-characters">
+		<div style="position: absolute;">
 			<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="margin-top: -170px; margin-left: -425px; rotate: 5deg; transform: scaleX(-1);">
 			<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="margin-top: -160px; margin-left: 60px; rotate: 0deg;">
 			<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="margin-top: -40px; margin-left: 93%; rotate: 20deg; z-index: -10;">
