--- a/index.html
+++ b/index.html
@@ -96,15 +96,6 @@
 			</button> 
 		</div>
 
-		<div style="position: absolute;">
-			<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="margin-top: -170px; margin-left: -425px; rotate: 5deg; transform: scaleX(-1);">
-			<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="margin-top: -160px; margin-left: 60px; rotate: 0deg;">
-			<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="margin-top: -40px; margin-left: 93%; rotate: 20deg; z-index: -10;">
-			<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="margin-top: -55px; margin-left: 20%; rotate: 0deg; z-index: 2;">
-			<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="margin-top: 50px; margin-left: -57%; rotate: -5deg; transform: scaleX(-1);">
-			<img class="img-echoes" src="images/echoes-p7.png" title="That's a security guard" style="margin-top: 10px; margin-left: -350px; rotate: -15deg; transform: scaleX(-1);">
-		</div>
-
 		<div class="projectBubbles"></div>
 
 		<div class="z-text" style="margin-bottom: 20px;">
@@ -140,6 +131,15 @@
 		
 	</div>
 	</div>
+
+	<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="right:0%; top:80%;">
+	<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="top: -100px; left: 30%; rotate: 5deg; transform: scaleX(-1);">
+	<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="top: 135%; left: 2%; rotate: 20deg;">
+	<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="margin-top: -55px; margin-left: 20%; rotate: 0deg; z-index: 2;">
+	<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="margin-top: 50px; margin-left: -57%; rotate: -5deg; transform: scaleX(-1);">
+	<img class="img-echoes" src="images/echoes-p7.png" title="That's a security guard" style="margin-top: 10px; margin-left: -350px; rotate: -15deg; transform: scaleX(-1);">
+
+
 	<script src="script.js"></script>
 	<script src="js/leader-line.min.js"></script>
 	<script src="js/writeProjectBubbles.js" defer></script>
