--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 	<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="right:0%; top:80%;">
 	<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="top: -100px; left: 30%; rotate: 5deg; transform: scaleX(-1);">
 	<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="top: 135%; left: 2%; rotate: 20deg;">
-	<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="margin-top: -55px; margin-left: 20%; rotate: 0deg; z-index: 2;">
-	<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="margin-top: 50px; margin-left: -57%; rotate: -5deg; transform: scaleX(-1);">
-	<img class="img-echoes" src="images/echoes-p7.png" title="That's a security guard" style="margin-top: 10px; margin-left: -350px; rotate: -15deg; transform: scaleX(-1);">
+	<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="top: 200%; right: 5%; rotate: 0deg;">
+	<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="top: 175%; left: 1%; rotate: -5deg; transform: scaleX(-1);">
+	<img class="img-echoes" src="images/echoes-p7.png" title="That's a security guard" style="top: 245%; right:4%; rotate: -15deg; transform: scaleX(-1);">
 
 
 	<script src="script.js"></script>
