--- a/index.html
+++ b/index.html
@@ -134,10 +134,14 @@
 
 	<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="right:0%; top:80%;">
 	<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="top: -100px; left: 30%; rotate: 5deg; transform: scaleX(-1);">
-	<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="top: 135%; left: 2%; rotate: 20deg;">
+	<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="top: 95%; left: 1%; rotate: 20deg;">
 	<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="top: 200%; right: 5%; rotate: 0deg;">
-	<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="top: 175%; left: 1%; rotate: -5deg; transform: scaleX(-1);">
+	<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="top: 175%; left: 3%; rotate: -5deg; transform: scaleX(-1);">
 	<img class="img-echoes" src="images/echoes-p7.png" title="That's a security guard" style="top: 245%; right:4%; rotate: -15deg; transform: scaleX(-1);">
+	<img class="img-pingu" src="images/pingu-p5.png" title="That's a differently flying pig. Great engineers those pigs." style="top: 225%; left:1%; rotate: -15deg; transform: scaleX(-1);">
+	<img class="img-schrodinger" src="images/stanley-1.png" title="That's a dead guy... a mysteriously dead guy!" style="top: 295%; left:2%; rotate: 5deg; transform: scaleX(-1);">
+	<img class="img-schrodinger" src="images/stanley-4.png" title="That's Alexander... he did nothing wrong I think." style="top: 295%; right:2%; rotate: 5deg;">
+	<img class="img-schrodinger" src="images/stanley-5.png" title="That's Detective Sylvester Felix Schrodinger." style="top: 130%; left:50%; rotate: 5deg;">
 
 
 	<script src="script.js"></script>
