added decorporate characters

--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 				</ul>
 			</div>
 
-			<div class="intro-child-right-sep" style="border-left:1px solid #000;height:40vh">
-				<img class="img-scrambled" src="images/scrambled-p1.png" title="That's a chicken with a grenade launcher" style="margin-top: 263px; margin-left: -35px; transform: scaleX(-1);">
-			</div>
+			<div class="intro-child-right-sep" style="border-left:1px solid #000;height:40vh"></div>
 
 			<div class="intro-child-links">
 				<div class="links">
@@ -132,17 +130,23 @@
 	</div>
 	</div>
 
-	<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="right:0%; top:80%;">
-	<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="top: -100px; left: 30%; rotate: 5deg; transform: scaleX(-1);">
-	<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="top: 95%; left: 1%; rotate: 20deg;">
-	<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="top: 200%; right: 5%; rotate: 0deg;">
-	<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="top: 175%; left: 3%; rotate: -5deg; transform: scaleX(-1);">
-	<img class="img-echoes" src="images/echoes-p7.png" title="That's a security guard" style="top: 245%; right:4%; rotate: -15deg; transform: scaleX(-1);">
-	<img class="img-pingu" src="images/pingu-p5.png" title="That's a differently flying pig. Great engineers those pigs." style="top: 225%; left:1%; rotate: -15deg; transform: scaleX(-1);">
-	<img class="img-schrodinger" src="images/stanley-1.png" title="That's a dead guy... a mysteriously dead guy!" style="top: 295%; left:2%; rotate: 5deg; transform: scaleX(-1);">
-	<img class="img-schrodinger" src="images/stanley-4.png" title="That's Alexander... he did nothing wrong I think." style="top: 295%; right:2%; rotate: 5deg;">
-	<img class="img-schrodinger" src="images/stanley-5.png" title="That's Detective Sylvester Felix Schrodinger." style="top: 130%; left:50%; rotate: 5deg;">
-
+	<div style="opacity: 0.4;">
+		<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="right:0%; top:80%;">
+		<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="top: -100px; left: 30%; rotate: 5deg; transform: scaleX(-1);">
+		<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="top: 95%; left: 1%; rotate: 20deg;">
+		<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="top: 200%; right: 5%; rotate: 0deg;">
+		<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="top: 175%; left: 3%; rotate: -5deg; transform: scaleX(-1);">
+		<img class="img-echoes" src="images/echoes-p7.png" title="That's a security guard" style="top: 270%; right:4%; rotate: -15deg; transform: scaleX(-1);">
+		<img class="img-pingu" src="images/pingu-p5.png" title="That's a differently flying pig. Great engineers those pigs." style="top: 225%; left:1%; rotate: -15deg; transform: scaleX(-1);">
+		<img class="img-schrodinger" src="images/stanley-1.png" title="That's a dead guy... a mysteriously dead guy!" style="top: 295%; left:2%; rotate: 5deg; transform: scaleX(-1);">
+		<img class="img-schrodinger" src="images/stanley-4.png" title="That's Alexander... he did nothing wrong I think." style="top: 295%; right:30%; rotate: 5deg;">
+		<img class="img-schrodinger" src="images/stanley-5.png" title="That's Detective Sylvester Felix Schrodinger." style="top: 130%; left:50%; rotate: 5deg;">
+		<img class="img-decorporate" src="images/decorporate-1.png" title="That's your manager! Better hide!" style="top: 140%; right:7%; rotate: 5deg;">
+		<img class="img-decorporate" src="images/decorporate-2.png" title="That's the poulet. He exists. Somehow." style="top: 200%; left:21%; rotate: 5deg;">
+		<img class="img-decorporate" src="images/decorporate-3.png" title="Such... such power! I thought it was a myth!!!" style="top: 215%; left:40%; rotate: 5deg; scale: 0.2;">
+		<img class="img-decorporate" src="images/decorporate-4.png" title="That's the employee :o" style="top: 300%; right:6%; rotate: 5deg;">
+		<img class="img-scrambled" src="images/scrambled-p1.png" title="That's a chicken with a grenade launcher" style="top: 50%; right: 20%; transform: scaleX(-1);">
+	</div>
 
 	<script src="script.js"></script>
 	<script src="js/leader-line.min.js"></script>
