--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		<hr class="h-line" style="margin-top: 200px;"/>
 		<div style="height:20px;">
 			<img class="img-olmo" src="images/olmo-6.png" title="That's the mayor..." style="margin-top: -185px; margin-left: -110px; rotate: 0deg; transform: scale(2.0);">
-			<img class="img-olmo" src="images/olmo-cerez.png" title="You found Olmo! :))" style="margin-top: -290px; margin-left: 60px; rotate: 0deg;">
+			<img class="img-olmo" src="images/olmo-cerez.png" title="You... you're not supposed to be here." style="margin-top: -290px; margin-left: 60px; rotate: 0deg;">
 			<img class="img-olmo" src="images/olmo-building.png" title="That's just Castano's place." style="margin-top: -463px; margin-left: 65%; rotate: 0deg; transform: scale(2.5);">
 		</div>
 
@@ -142,7 +142,7 @@
 		<img class="img-schrodinger" src="images/stanley-4.png" title="That's Alexander... he did nothing wrong I think." style="top: 295%; right:30%; rotate: 5deg;">
 		<img class="img-schrodinger" src="images/stanley-5.png" title="That's Detective Sylvester Felix Schrodinger." style="top: 130%; left:50%; rotate: 5deg;">
 		<img class="img-decorporate" src="images/decorporate-1.png" title="That's your manager! Better hide!" style="top: 140%; right:7%; rotate: 5deg;">
-		<img class="img-decorporate" src="images/decorporate-2.png" title="That's the poulet. He exists. Somehow." style="top: 200%; left:21%; rotate: 5deg;">
+		<img class="img-decorporate" src="images/decorporate-2.png" title="That's le poulet. He exists. Somehow." style="top: 200%; left:21%; rotate: 5deg;">
 		<img class="img-decorporate" src="images/decorporate-3.png" title="Such... such power! I thought it was a myth!!!" style="top: 215%; left:40%; rotate: 5deg; scale: 0.2;">
 		<img class="img-decorporate" src="images/decorporate-4.png" title="That's the employee :o" style="top: 300%; right:6%; rotate: 5deg;">
 		<img class="img-scrambled" src="images/scrambled-p1.png" title="That's a chicken with a grenade launcher" style="top: 50%; right: 20%; transform: scaleX(-1);">
