removed old script.js + fixed github link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<nav class="shift">
 						<ul class="links-list">
 							<li>
-								<a class="link-a" href="https://github.com/Maxenceoresteleandre" target="_blank" rel="noopener noreferrer">Github</a>
+								<a class="link-a" href="https://github.com/Maxoups" target="_blank" rel="noopener noreferrer">Github</a>
 							</li>
 							<li>
 								<a class="link-a" href="https://maxence-maire.itch.io/" target="_blank" rel="noopener noreferrer">Itch</a>
