added dark mode destroyer preventer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link href='bubbles_background.css' rel='stylesheet'>
 	<link href='hover_effects.css' rel='stylesheet' type='text/css'>
 	<link href='sidebar_style.css' rel='stylesheet'>
-
+	
+	<meta name="color-scheme" content="light only">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1000.0, minimum-scale=0.0, user-scalable=yes">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Mono&display=swap" rel="stylesheet">
 </head>
