--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<div class="z-text" style="margin-bottom: 20px;">
 			<h3 style="margin-top: 125px;">Get in touch!</h3>
 			<p>
-				If you're on this website, it might be because you're asking yourself if you want to hire me, or because you're interested in my work, 
+				If you're on this website, it might be because you want to hire me, or because you're interested in my work, 
 				or just because you stumbled upon this page and were curious enough to read all of it. In any case, happy to see you here! You can contact me 
 				through the link below.
 			</p>
