--- a/dungeon-crew/archive.html
+++ b/dungeon-crew/archive.html
@@ -19,7 +19,7 @@
 
     <div class="archivePage subPage" align="center">
         
-        <h1>Archive</h1>
+        <h1>Dungeon Archives</h1>
         <script>
         indexPage = "index.html" //set which html page your comics are on, supremely important. archive system will break otherwise
         </script>
