completed olmo pages script

--- a/olmo.html
+++ b/olmo.html
@@ -14,8 +14,9 @@
 </head>
 <body>
 	
+    <div class="olmo-page1"></div>
 	
-		
+	<script src="js/olmo-page.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
