--- a/still-olmo.html
+++ b/still-olmo.html
@@ -14,39 +14,9 @@
 </head>
 <body>
 	
-	<!-- Page content -->
-	<div class="main">
-	<div class="container">
-		<div style="height:50px"></div>
-
-		<div class="z-text" style="margin-bottom: 20px;">
-			<h3 style="margin-top: 125px;">Well hi.</h3>
-			<p>
-				Well you're awfully persistent. I told you to leave. 
-			</p>
-			<a class="link-n" style="text-align:center;margin-top:5px; padding-bottom: 45px;" href = "index.html.html" rel="noopener noreferrer">Go back</a>
-		</div>
-
-		<hr class="h-line" style="margin-top: 200px;"/>
-		<div style="height:20px;">
-			<img class="img-olmo" src="images/olmo-6.png" title="That's the mayor..." style="margin-top: -185px; margin-left: -110px; rotate: 0deg; transform: scale(2.0);">
-			<img class="img-olmo" src="images/olmo-cerez.png" title="You... you're not supposed to be here." style="margin-top: -290px; margin-left: 60px; rotate: 0deg;">
-			<img class="img-olmo" src="images/olmo-building.png" title="That's just Castano's place." style="margin-top: -463px; margin-left: 65%; rotate: 0deg; transform: scale(2.5);">
-		</div>
-
-		<div class="bubbles">
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-		</div>
-		
+    <div class="olmo-page2"></div>
+	
+	<script src="js/olmo-page.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
