fixed olmo pages script

--- a/still-olmo.html
+++ b/still-olmo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Maxence Maire</title>
+	<title>Key 2</title>
 	
 	<link rel="stylesheet" href="style.css">
 	<link href='bubbles_background.css' rel='stylesheet'>
