wip cryptic stuff

--- a/still-olmo.html
+++ b/still-olmo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Key 2</title>
+	<title>k2-3</title>
 	
 	<link rel="stylesheet" href="style.css">
 	<link href='bubbles_background.css' rel='stylesheet'>
@@ -18,5 +18,6 @@
 	
 	<script src="js/olmo-page.js"></script>
 	<script src="script.js"></script>
+	<script src="js/olmo-console.js"></script>
 </body>
 </html>
