finished password protex+cted page

--- a/arg_game/arg_7308.html
+++ b/arg_game/arg_7308.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>k4-8</title>
+	<title>Congrats.</title>
 	
 	<link rel="stylesheet" href="../style.css">
 	<link href='../bubbles_background.css' rel='stylesheet'>
@@ -19,17 +19,7 @@
             <div style="height:50px"></div>
     
             <div class="z-text" style="margin-bottom: 20px;">
-                <h3 style="margin-top: 125px;">Restricted area</h3>
-                <p>Enter key to proceed</p>
-
-                <div id="protect-overlay" style="display: flex; justify-content: center;">
-                    <form id="hashForm" action="#">
-                        <input name="answer" type="password" id="inputText" placeholder=""/>
-                        <button type="submit" style="margin-left: 100%; color:white;">Open</button>
-                    </form>
-                </div>
-
-                <a class="link-n" style="text-align:center;margin-top:5px; padding-bottom: 45px;" href = "../index.html" rel="noopener noreferrer">Go back</a>
+                <a class="link-n" style="text-align:center;margin-top:5px; padding-bottom: 45px; padding-top: 45px;" href = "../index.html" rel="noopener noreferrer" download>olmo.jpg</a>
             </div>
     
             <hr class="h-line" style="margin-top: 200px;"/>
