added downloadable doc

--- a/arg_game/arg_7308.html
+++ b/arg_game/arg_7308.html
@@ -19,7 +19,7 @@
             <div style="height:50px"></div>
     
             <div class="z-text" style="margin-bottom: 20px;">
-                <a class="link-n" style="text-align:center;margin-top:5px; padding-bottom: 45px; padding-top: 45px;" href = "../index.html" rel="noopener noreferrer" download>olmo.jpg</a>
+                <a class="link-n" style="text-align:center;margin-top:5px; padding-bottom: 45px; padding-top: 45px;" href = "olmoaXjflpMfehsOPFg7486dhcza.jpg" download="olmo">olmo.jpg</a>
             </div>
     
             <hr class="h-line" style="margin-top: 200px;"/>
