--- a/arg_game/arg_7308.html
+++ b/arg_game/arg_7308.html
@@ -25,7 +25,9 @@
     
             <hr class="h-line" style="margin-top: 200px;"/>
             <div style="height:20px;">
+                <img class="img-olmo" src="../images/olmo-6.png" title="That's the mayor..." style="margin-top: -185px; margin-left: -110px; rotate: 0deg; transform: scale(2.0);">
                 <img class="img-olmo" src="../images/olmo-cerez.png" title="You... you're not supposed to be here." style="margin-top: -290px; margin-left: 60px; rotate: 0deg;">
+                <img class="img-olmo" src="../images/olmo-building.png" title="That's just Castano's place." style="margin-top: -463px; margin-left: 65%; rotate: 0deg; transform: scale(2.5);">
             </div>
     
             <div class="bubbles">
