--- a/arg_game/olmo-arg.html
+++ b/arg_game/olmo-arg.html
@@ -19,7 +19,7 @@
             <div style="height:50px"></div>
     
             <div class="z-text" style="margin-bottom: 20px;">
-                <h3 style="margin-top: 125px;">Restricted area</h3>
+                <h3 style="margin-top: 125px;">PIN required</h3>
                 <p>Enter key to proceed</p>
 
                 <div id="protect-overlay" style="display: flex; justify-content: center;">
