--- a/dungeon-crew/about.html
+++ b/dungeon-crew/about.html
@@ -23,7 +23,7 @@
     <div class="subPage clearfix">
         <h1>About</h1>
         <p>This is a little project of mine. I am trying to write a pixel art webcomic loosely based on a game idea I had, and which I may or may not realize one day. <strong>Dungeon Crew</strong> is a webcomic series about a bunch of evildoers doing evil stuff in their evil dungeon.</p> 
-        <p><strong>Comics are (hopefully) released once a week, every sunday on 6pm GMT+1.</strong></p>
+        <p><strong>Comics are released every Sunday.</strong></p>
         
         <img src="img/banner_vertical.png" alt="Hilda Terry" class="clearfix leftPic"/>
 
