added max length of 4 for pin input

--- a/arg_game/olmo-arg.html
+++ b/arg_game/olmo-arg.html
@@ -24,7 +24,7 @@
 
                 <div id="protect-overlay" style="display: flex; justify-content: center;">
                     <form id="hashForm" action="#">
-                        <input name="answer" type="password" id="inputText" placeholder=""/>
+                        <input name="answer" type="password" maxlength="4" id="inputText" placeholder=""/>
                         <button type="submit" style="margin-left: 100%; color:white;">Open</button>
                     </form>
                 </div>
