--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<img class="img-echoes" src="images/echoes-p1.png" title="That's Miner..." style="margin-top: 20px; margin-left: -20px; rotate: -30deg;">
 				<img class="img-scrambled" src="images/scrambled-p2.png" title="That's a chicken without a gun" style="margin-top: 220px; margin-left: -50px; rotate: 240deg;">
 				<img class="img-scrambled" src="images/scrambled-p3.png" title="That's a chicken with a gun" style="margin-top: 150px; margin-left: -100px; rotate: 270deg; transform: scaleX(-1);">
-				<img class="img-olmo" src="images/olmo-1.png" title="That's Castano :D" style="margin-top: -90px; margin-left: -155px; rotate: -20deg;">
+				<img class="img-olmo" src="images/olmo-1.png" title="That's Castano :D (+1-080-619-2579)" style="margin-top: -90px; margin-left: -155px; rotate: -20deg;">
 				<img class="img-pingu" src="images/pingu-p1.png" title="That's Pingu!!! By Cochon_Viking" style="margin-top: -47px; margin-left: -20px; rotate: 0deg;">
 				<img class="img-pingu" src="images/pingu-p3.png" title="That's a yeti... By Cochon_Viking" style="margin-top: -90px; margin-left: 140px; rotate: 0deg;">
 
@@ -111,7 +111,7 @@
 		<div style="height:20px;">
 			<img class="img-olmo" src="images/olmo-6.png" title="That's the mayor..." style="margin-top: -185px; margin-left: -110px; rotate: 0deg; transform: scale(2.0);">
 			<a href="olmo.html">
-				<img class="img-olmo" src="images/olmo-cerez.png" title="You... you're not supposed to be here." style="margin-top: -290px; margin-left: 60px; rotate: 0deg;">
+				<img class="img-olmo" src="images/olmo-cerez.png" title="Hey, that's Olmo! (+1-260-718-7512)" style="margin-top: -290px; margin-left: 60px; rotate: 0deg;">
 			</a>
 			<img class="img-olmo" src="images/olmo-building.png" title="That's just Castano's place." style="margin-top: -463px; margin-left: 65%; rotate: 0deg; transform: scale(2.5);">
 		</div>
