added nogale + phone number

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 		<hr class="h-line" style="margin-top: 200px;"/>
 		<div style="height:20px;">
-			<img class="img-olmo" src="images/olmo-6.png" title="That's the mayor..." style="margin-top: -185px; margin-left: -110px; rotate: 0deg; transform: scale(2.0);">
+			<img class="img-olmo" src="images/olmo-6.png" title="That's the mayor... I'm not even sure they have a phone." style="margin-top: -185px; margin-left: -110px; rotate: 0deg; transform: scale(2.0);">
 			<a href="olmo.html">
 				<img class="img-olmo" src="images/olmo-cerez.png" title="Hey, that's Olmo! (+1-260-718-7512)" style="margin-top: -290px; margin-left: 60px; rotate: 0deg;">
 			</a>
@@ -133,8 +133,9 @@
 	</div>
 
 	<div style="opacity: 0.4;">
-		<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:|" style="right:0%; top:80%;">
-		<img class="img-olmo" src="images/olmo-4.png" title="IS THAT A PIRATE CHICK???" style="top: -100px; left: 30%; rotate: 5deg; transform: scaleX(-1);">
+		<img class="img-olmo" src="images/olmo-3.png" title="That's the intern >:| doesn't have the money for a phone." style="right:0%; top:80%;">
+		<img class="img-olmo" src="images/olmo-4.png" title="Is that (+1-041-019-5757) Melocotonero??" style="top: -100px; left: 30%; rotate: 5deg; transform: scaleX(-1);">
+		<img class="img-olmo" src="images/nogale.png" id="+1-300-817-9754" title="Don't get too close to the students. They bite." style="top: 345%; left: 60%; rotate: 5deg; transform: scaleX(-1);">
 		<img class="img-echoes" src="images/echoes-p2.png" title="That's still your echo :]" style="top: 95%; left: 1%; rotate: 20deg;">
 		<img class="img-pingu" src="images/pingu-p2.png" title="That's an alien pig. By Cochon_Viking" style="top: 200%; right: 5%; rotate: 0deg;">
 		<img class="img-echoes" src="images/echoes-p6.png" title="That's the Shark!" style="top: 175%; left: 3%; rotate: -5deg; transform: scaleX(-1);">
