added full date to index page

--- a/dungeon-crew/index.html
+++ b/dungeon-crew/index.html
@@ -26,6 +26,8 @@
       <div class="writeNav"></div>
       <!-- write the current page of your comic -->
       <div class="writePageClickable"></div>
+      <!-- write the date of the comic publication -->
+      <div class="writePageDate"></div>
       <!-- write bottom navigation -->
       <div class="writeNav"></div>
       
