updated mayor picture & description

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 		<hr class="h-line" style="margin-top: 200px;"/>
 		<div style="height:20px;">
-			<img class="img-olmo" src="images/olmo-6.png" title="That's the mayor... I'm not even sure they have a phone." style="margin-top: -185px; margin-left: -110px; rotate: 0deg; transform: scale(2.0);">
+			<img class="img-olmo" src="images/olmo-6.png" title="That's the mayor... I'm not even sure they have a phone. Like he's more of a fax kinda guy. Or letter. He doesn't talk to many people. Pretty self-centered the dude is. Like his passwords are all something dumb like TheMayorIsAwesome123 or something like that. You know the type? Everyone has something like that in their life. Pretty annoying all-around." style="margin-top: -185px; margin-left: -110px; rotate: 0deg; transform: scale(2.0);">
 			<a href="olmo.html">
 				<img class="img-olmo" src="images/olmo-cerez.png" title="Hey, that's Olmo! (+1-260-718-7512)" style="margin-top: -290px; margin-left: 60px; rotate: 0deg;">
 			</a>
