--- a/olmo.html
+++ b/olmo.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	
-	<img class="img-olmo" id="+1-221-117-1838" src="images/acacia.png" title="That's Acacia! They're in space." style="right:0%; top:110%;">
+	<img class="img-olmo" id="+1-221-117-1838" src="images/acacia.png" title="That's Acacia! She's in space." style="right:0%; top:110%;">
     <div class="olmo-page1"></div>
 	
 	<script src="js/olmo-page.js"></script>
