--- a/arg_game/olmo-arg.html
+++ b/arg_game/olmo-arg.html
@@ -22,7 +22,7 @@
             <div class="z-text" style="margin-bottom: 20px;">
                 <div style="height:50px"></div>
                 <h3 style="margin-top: 0px;">Game Presentaion</h3>
-                <p>Do you know Where's Waldo? The game in which you've got to find Waldo? Well here you have to find Olmo. He's a bird. Good luck. This game is neither easy nor fair.</p>
+                <p>Do you know Where's Wally? The game in which you've got to find Wally? Well here you have to find Olmo. He's a bird. An annoying one. Good luck. This game is neither easy nor fair.</p>
                 <div style="height:50px"></div>
             </div>
 
