reorganized project bubbles

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 				<hr class="h-line2"/>
 
 				<ul class="z-text">
-					<li>Computer scientist, game developer and game designer.</li>
-					<li>Master's degree in Computer Science from Sorbonne Université.</li>
-					<li>All-around creative tinkerer!</li>
+					<li>Programmer, game developer, game designer and now comic book writer!</li>
+					<li>I have a bunch of degrees in Computer Science and Modern Literature from Sorbonne Université.</li>
+					<li>All-around creative tinkerer! :)</li>
 				</ul>
 			</div>
 
