--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<ul class="z-text">
 					<li>Programmer, game developer, game designer and now comic book writer!</li>
 					<li>I have a bunch of degrees in Computer Science and Modern Literature from Sorbonne Université.</li>
-					<li>Tinkerer extraordinaire.</li>
+					<li>Creative spirit and Tinkerer extraordinaire.</li>
 				</ul>
 			</div>
 
