--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 				<ul class="z-text">
 					<li>Programmer, game developer, game designer and now comic book writer</li>
-					<li>I have a bunch of degrees in Computer Science and Modern Literature from Sorbonne Université</li>
-					<li>Creative spirit and Tinkerer extraordinaire</li>
+					<li>Has a bunch of degrees in Computer Science and Modern Literature from Sorbonne Université laying around, somewhere</li>
+					<li>Creative spirit and tinkerer extraordinaire!</li>
 				</ul>
 			</div>
 
