--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<hr class="h-line2"/>
 
 				<ul class="z-text">
-					<li>Programmer, game developer, game designer and now comic book writer</li>
+					<li>Programmer, game developer, game designer, software engineer and now comic book writer</li>
 					<li>Has a bunch of degrees in Computer Science and Modern Literature from Sorbonne Université laying around, somewhere</li>
 					<li>Creative spirit and tinkerer extraordinaire!</li>
 				</ul>
