added Umami to all pages

--- a/password_html_test.html
+++ b/password_html_test.html
@@ -18,6 +18,7 @@
         text-align:center;
       }
     </style>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="28c3fc28-f06c-46ee-89bc-81fdccbf5b85"></script>
   </head>
   <body>
 <div id="protect-body" class="body">Ciluk baaa!</div>
