--- a/dungeon-crew/about.html
+++ b/dungeon-crew/about.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Cream+Soda&display=swap" rel="stylesheet">
     <!-- Open Sans -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="28c3fc28-f06c-46ee-89bc-81fdccbf5b85"></script>
 </head>
 <body>
     <!-- header -->
