--- a/dungeon-crew/archive.html
+++ b/dungeon-crew/archive.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- Cherry Cream Soda -->
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Cream+Soda&display=swap" rel="stylesheet">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="28c3fc28-f06c-46ee-89bc-81fdccbf5b85"></script>
 </head>
 <body>
     <!-- header -->
