--- a/arg_game/index.html
+++ b/arg_game/index.html
@@ -8,6 +8,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1000.0, minimum-scale=0.0, user-scalable=yes">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Mono&display=swap" rel="stylesheet">
+	<script defer src="https://cloud.umami.is/script.js" data-website-id="28c3fc28-f06c-46ee-89bc-81fdccbf5b85"></script>
 </head>
 <body>
 	
