--- a/ancestral-cookbook/receipe-post.html
+++ b/ancestral-cookbook/receipe-post.html
@@ -246,11 +246,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="receipe-slider owl-carousel">
-                        <img src="img/bg-img/bg5.jpg" alt="">
-                        <img src="img/bg-img/bg5.jpg" alt="">
-                        <img src="img/bg-img/bg5.jpg" alt="">
-                    </div>
+                    <div id="slider-container"></div>
                 </div>
             </div>
         </div>
@@ -509,6 +505,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- ##### Footer Area Start ##### -->
 
     <!-- ##### All Javascript Files ##### -->
+
+    <script src="js/recipe_functions.js"></script>
+
     <!-- jQuery-2.2.4 js -->
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
     <!-- Popper js -->
