--- a/ancestral-cookbook/recipe-post.html
+++ b/ancestral-cookbook/recipe-post.html
@@ -242,7 +242,7 @@
             </div>
         </div>
 
-        <!-- Receipe Slider -->
+        <!-- Recipe Slider -->
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -251,7 +251,7 @@
             </div>
         </div>
 
-        <!-- Receipe Content Area -->
+        <!-- Recipe Content Area -->
         <div class="receipe-content-area">
             <div class="container">
 
@@ -259,7 +259,7 @@
                     <div class="col-12 col-md-8">
                         <div class="receipe-headline my-5">
                             <span>April 05, 2018</span>
-                            <h2>Vegetarian cheese salad</h2>
+                            <h2 id="recipe-title"></h2>
                             <div class="receipe-duration">
                                 <h6>Prep: 15 mins</h6>
                                 <h6>Cook: 30 mins</h6>
