--- a/ancestral-cookbook/recipe-post.html
+++ b/ancestral-cookbook/recipe-post.html
@@ -258,7 +258,7 @@
                 <div class="row">
                     <div class="col-12 col-md-8">
                         <div class="receipe-headline my-5">
-                            <span>April 05, 2018</span>
+                            <span id="recipe-chef"></span>
                             <h2 id="recipe-title"></h2>
                             <div class="receipe-duration">
                                 <h6>Prep: 15 mins</h6>
