--- a/ancestral-cookbook/recipe-post.html
+++ b/ancestral-cookbook/recipe-post.html
@@ -511,6 +511,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
     <!-- ##### All Javascript Files ##### -->
 
+    <script src="js\PapaParse-5.0.2\papaparse.min.js"></script>
     <script src="js/recipe_functions.js"></script>
 
     <!-- jQuery-2.2.4 js -->
